# remote_play

./: .gitignore  pyproject.toml  requirements.txt  todo.txt
core/: CMakeLists.txt
core/common/: CMakeLists.txt
core/common/include/: common.hpp  input_messages.hpp  stream_messages.hpp
core/common/src/: common.cpp
core/src/: main.cpp
core/stun_client/: CMakeLists.txt
core/stun_client/include/: stun_client.hpp  stun_constants.hpp  stun_response_validator.hpp
core/stun_client/src/: main.cpp  stun_client.cpp  stun_response_validator.cpp
core/udp_client/: CMakeLists.txt
core/udp_client/include/: input_capture.hpp  udp_client.hpp
core/udp_client/src/: input_capture.cpp  main.cpp  udp_client.cpp
core/udp_connection/: CMakeLists.txt
core/udp_connection/include/: udp_connection.hpp
core/udp_connection/src/: main.cpp  udp_connection.cpp
core/udp_server/: CMakeLists.txt
core/udp_server/include/: udp_server.hpp
core/udp_server/src/: main.cpp  udp_server.cpp
core/virtual_keyboard/: CMakeLists.txt
core/virtual_keyboard/include/: input_simulator.hpp  input_simulator_windows.hpp  sfml_to_windows_key_map.hpp  windows_virtual_key_codes.hpp
core/virtual_keyboard/src/: input_simulator.cpp  input_simulator_windows.cpp
dev/: project_structure.txt
dev/scripts/: package.bat  package.py  run.bat  run.py  tempCodeRunnerFile.bat
dev/scripts/builds/: __init__.py  cmake_build.bat  cmake_build.py  pyinstaller_build.bat  pyinstaller_build.py  pyinstaller_setup.bat  pyinstaller_setup.py
dev/scripts/utils/: __init__.py  constants.py  helpers.py
gui/: main.py
gui/controllers/: network_controller.py  worker_controller.py
gui/ui/: main_window.py
gui/ui/widgets/: __init__.py  network_discovery.py  peer_connection.py
gui/ui/widgets/network_discovery/: __init__.py  handlers.py  network_discovery.py  ui.py
gui/ui/widgets/peer_connection/: __init__.py  handlers.py  peer_connection.py  ui.py
gui/utils/: __init__.py  constants.py  network.py  subprocess.py
gui/workers/: __init__.py  base_subprocess_worker.py  subprocess_workers.py
